--- a/pom.xml
+++ b/pom.xml
@@ -468,14 +468,17 @@
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.7</version>
       
-      	<configuration>
-      		<formats>
-      			<format>xml</format>
-      		</formats>
-     	 </configuration>
-      
+      		<configuration>
+      			<formats>
+      				<format>xml</format>
+      			</formats>
+     	 	</configuration>
+     	 </plugin>
+        <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jdepend-maven-plugin</artifactId>
+        <version>2.0</version>
       </plugin>
-      
         </plugins>
     </reporting>
 
